--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -66,7 +66,7 @@ When designing a data structure for the sliCQT, each of these points has to be a
 \subsubsection{3D shape of the sliCQT compared to the 2D STFT}
 \label{sec:stftslicqtcomp1}
 
-The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime implementation of the NSGT, consisting of DFT coefficients computed for the input signal split into overlapping slices, shown in Figure \ref{fig:slicqtukeys}. The sliCQT therefore returns the DFT coefficients of consecutive slices of length $sllen$ of an input signal of length $N > sllen$. These slices need to be overlap-added with 50\% of the previous and next slice to produce a spectrogram\explanation{drop `meaningful' since non-overlapped is not a spectrogram}, because each slice is symmetrically zero-padded to twice its length to reduce time-aliasing, which was described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. This is a characteristic specific to the sliCQT. The NSGT, which is the ancestor of the sliCQT not designed for realtime processing, outputs the spectrogram directly without requiring any overlap-add.
+The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime implementation of the NSGT, consisting of DFT coefficients computed for the input signal split into overlapping slices, shown in Figure \ref{fig:slicqtukeys}. The sliCQT therefore returns the DFT coefficients of consecutive slices of length $sllen$ of an input signal of length $N > sllen$. These slices need to be overlap-added with 50\% of the previous and next slice to produce a spectrogram, because each slice is symmetrically zero-padded to twice its length to reduce time-aliasing, which was described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. This is a characteristic specific to the sliCQT. The NSGT, which is the ancestor of the sliCQT not designed for realtime processing, outputs the spectrogram directly without requiring any overlap-add.
 
 Figure \ref{fig:raggedslicqtoverlapadd} shows the procedure of overlap-adding ragged adjacent slices of the sliCQT to produce the final overlap-added ragged transform.
 
@@ -187,9 +187,9 @@ As discussed in Section \ref{sec:ml}, the validation split of a dataset is often
 
 As described in Section \ref{sec:improvelib}, the time and frequency resolution of the sliCQT are defined from the frequency scale, and the parameters of the frequency scale are $f_{\text{min}}$ and $f_{\text{max}}$, which are the minimum and maximum frequency in Hz respectively, and the total frequency bins.
 
-The maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz, which is the Nyquist rate of the 44,100 Hz sample rate of MUSDB18-HQ. I made this decision after early experiments showed that fixing the maximum frequency to 22,050 Hz in several cases led to a smaller size of the sliCQT than choosing a smaller $f_{\text{max}}$, resulting in lower memory demands on the system. The results of these early experiments are shown in Appendix \ref{appendix:slicqdim1}.\explanation{added appendix with measurements}
+The maximum frequency $f_{\text{max}}$ was fixed to 22,050 Hz, which is the Nyquist rate of the 44,100 Hz sample rate of MUSDB18-HQ. I made this decision after early experiments showed that fixing the maximum frequency to 22,050 Hz in several cases led to a smaller size of the sliCQT than choosing a smaller $f_{\text{max}}$, resulting in lower memory demands on the system. The results of these early experiments are shown in Appendix \ref{appendix:slicqdim1}.
 
-The minimum frequency $f_{\text{min}}$ was chosen from the range of 10.0--130.0 Hz, loosely based on the frequencies of the C0 (16.35 Hz) and C3 (130.81 Hz) \hlblu{notes of the well-tempered scale}.
+The minimum frequency $f_{\text{min}}$ was chosen from the range of 10.0--130.0 Hz, loosely based on the frequencies of the C0 (16.35 Hz) and C3 (130.81 Hz) notes of the well-tempered scale.
 
 The total frequency bins were chosen from the range of 10--300 bins. The 300-bin maximum was determined by the maximum size of sliCQT that could fit in the 12 GB GPU memory of the NVIDIA 3080 Ti GPU. Details of the hardware limitations of the testbench computer are shown in Appendix \ref{appendix:computerspec}.
 
@@ -254,7 +254,7 @@ Finally, in Section \ref{sec:xumxinc}, I will show how I incorporated the X-UMX 
 
 In this section, I will describe the changes made to X-UMX to support the data-structure of the sliCQT shown in Section \ref{sec:torchslicqdatastructure}, which addressed the distinct traits of the sliCQT compared to the STFT: the 3D slice-wise output, and the ragged shape from the nonuniform time-frequency resolution.
 
-Firstly, X-UMX uses a sequence duration of six seconds, meaning the training input is the STFT of six seconds of music. The dimensionality of the sliCQT for a waveform is an \hlblu{order of magnitude larger} than the STFT for a variety of different sliCQT parameters, as was discovered during preliminary experiments shown in Appendix \ref{appendix:slicqdim2}\explanation{add appendix with measurements}. In these experiments, the sliCQT of a six second sequence used too much GPU memory during training. In xumx-sliCQ, I chose a smaller sequence duration of one second, resulting in a sliCQT with fewer coefficients that uses less GPU memory. Also, a one-second sequence duration is common in several demixing papers \parencite{plumbley1, plumbley2, demucs}.
+Firstly, X-UMX uses a sequence duration of six seconds, meaning the training input is the STFT of six seconds of music. The dimensionality of the sliCQT for a waveform is an order of magnitude larger than the STFT for a variety of different sliCQT parameters, as was discovered during preliminary experiments shown in Appendix \ref{appendix:slicqdim2}. In these experiments, the sliCQT of a six second sequence used too much GPU memory during training. In xumx-sliCQ, I chose a smaller sequence duration of one second, resulting in a sliCQT with fewer coefficients that uses less GPU memory. Also, a one-second sequence duration is common in several demixing papers \parencite{plumbley1, plumbley2, demucs}.
 
 In sections \ref{sec:raggedtf} and \ref{sec:torchslicqdatastructure}, I described the data structure of the ragged sliCQT and how it differed from the single rectangular matrix of the STFT. The ragged sliCQT outputs a list of 3D matrices, representing the sliced transform, that must be overlap-added to create a list of 2D time-frequency matrices. Recall that the list was introduced from the raggedness of the transform, because each group of time-frequency bins has a different temporal framerate, resulting in a different size tensor or matrix. This raggedness is a desired characteristic of nonuniform time-frequency transforms like the NSGT, sliCQT, and even the original CQT.
 
@@ -357,7 +357,7 @@ The exact parameters and configuration of the convolutional kernels and layers a
 \subsubsection{Bandwidth parameter}
 \label{sec:bandwidth}
 
-X-UMX has a bandwidth parameter that controls how many of the 2049 output frequencies of the STFT with a window size of 4096 are used as an input to the neural network. The default value of the bandwidth parameter is 16,000 Hz, which means that the frequency bins of the STFT $> 16,000 \text{ Hz}$ are cropped before the STFT is input into the neural network. I implemented the same parameter in both Bi-LSTM and CDAE architectures of xumx-sliCQ, by not using frequency bins of the sliCQT $> 16,000 \text{ Hz}$ as inputs to the neural network\explanation{put philipe's warning as a footnote}.\footnote{Note that since the sliCQT and STFT have different frequency bins and spectral bandwidths at each bin, cropping frequency bins above 16,000 Hz may result in a different effective spectral bandwidth in each transform respectively.}
+X-UMX has a bandwidth parameter that controls how many of the 2049 output frequencies of the STFT with a window size of 4096 are used as an input to the neural network. The default value of the bandwidth parameter is 16,000 Hz, which means that the frequency bins of the STFT $> 16,000 \text{ Hz}$ are cropped before the STFT is input into the neural network. I implemented the same parameter in both Bi-LSTM and CDAE architectures of xumx-sliCQ, by not using frequency bins of the sliCQT $> 16,000 \text{ Hz}$ as inputs to the neural network.\footnote{Note that since the sliCQT and STFT have different frequency bins and spectral bandwidths at each bin, cropping frequency bins above 16,000 Hz may result in a different effective spectral bandwidth in each transform respectively.}
 
 \subsubsection{De-overlap layer}
 \label{sec:deoverlap}
